--- a/11.多线程.md
+++ b/11.多线程.md
@@ -50,7 +50,7 @@ public class L extends Thread {  //继承Thread
 
 ```
 class SaleTicket implements Runnable {
-	int num = 50;            //不用加static  便可以实现
+	int num = 50;            //不用加static  也可以实现同步互斥
 	public void run() {
 		while(true){
 			synchronized("锁") {
@@ -212,3 +212,74 @@ public class L {
 }
 ```
 
+###11.4线程通讯
+线程通讯:一个线程完成了自己的任务时,要通知另外一个线程去完成另外一个任务.  
+wait():等待 如果线程执行了wait方法,那么该线程会进入等待状态,等待状态下必须要被其他线程调用notify()方法才能唤醒.  
+notify()唤醒 唤醒等待的线程.  
+wait与notify方法要注意的事项:  
+1. wait方法与notify方法是属于Object对象的.  
+2. wait方法与notify方法必须要在同步代码块或者是同步函数中才能使用.  
+3. wait方法与notify方法必须要由锁对象调用.  
+
+```
+//生产者消费者问题
+class Product {
+	String name;
+	double price;
+	int num;
+	boolean flag=false;
+}
+
+class Produce implements Runnable {
+	Product q;
+	public Produce (Product qq) {
+		q = qq;
+	}
+	public void run() {
+		while(true) {
+			synchronized(q){
+				if(q.flag == false) {
+					q.name ="苹果";
+					q.price = 2.5;
+					System.out.println("生产者生产了"+q.name+",价钱:"+q.price);
+					q.flag =true;
+					q.notify();
+				}else{
+					try {
+						q.wait();
+					} catch (InterruptedException e) {
+						e.printStackTrace();
+					}
+				}
+			}
+		}
+		
+	}
+	
+}
+class Custom implements Runnable {
+	Product q;
+	public Custom(Product qq) {
+		q = qq;
+	}
+	@Override
+	public void run() {
+		while(true) {
+			synchronized(q) {
+				if(q.flag == true) {
+					System.out.println("消费者购买了"+q.name+",价钱:"+q.price);
+					q.flag = false;
+					q.notify();
+				}else {
+					try {
+						q.wait();
+					} catch (InterruptedException e) {
+						// TODO Auto-generated catch block
+						e.printStackTrace();
+					}
+				}
+			}
+		}
+	}
+}
+```
