--- a/11.多线程.md
+++ b/11.多线程.md
@@ -215,7 +215,8 @@ public class L {
 ###11.4线程通讯
 线程通讯:一个线程完成了自己的任务时,要通知另外一个线程去完成另外一个任务.  
 wait():等待 如果线程执行了wait方法,那么该线程会进入等待状态,等待状态下必须要被其他线程调用notify()方法才能唤醒.  
-notify()唤醒 唤醒等待的线程.  
+notify()唤醒 唤醒线程池等待线程中的一个.  
+notifyAll() 唤醒线程池中所有等待的线程.  
 wait与notify方法要注意的事项:  
 1. wait方法与notify方法是属于Object对象的.  
 2. wait方法与notify方法必须要在同步代码块或者是同步函数中才能使用.  
