--- a/11.多线程.md
+++ b/11.多线程.md
@@ -222,6 +222,14 @@ wait与notify方法要注意的事项:
 2. wait方法与notify方法必须要在同步代码块或者是同步函数中才能使用.  
 3. wait方法与notify方法必须要由锁对象调用.  
 
+线程停止:  
+1. 停止一个线程,我们一般通过一个变量去控制.  
+2. 如果需要停止一个处于等待状态下的线程,我们需要通过变量配合notify方法或者interrupt来使用.  
+守护线程(后台线程):在一个进程中,如果只剩下了守护线程,那么守护线程死亡.  
+对象调用setDaemon(true)方法来设置后台线程.
+线程加入:  
+join()方法. 在一个线程中,如果执行了join语句,就有一个新线程加入,执行该语句的线程给新线程让步,等新线程执行完,然后才继续执行.
+
 ```
 //生产者消费者问题
 class Product {
