--- a/10.集合类Set.md
+++ b/10.集合类Set.md
@@ -1,4 +1,4 @@
-###10Set
+###10.Set
 Set 如果是实现了Set接口的集合类,具备特点:无序,不可重复.  
 Set接口的实现类:  
 ####10.1 HashSet
@@ -57,6 +57,11 @@ public class L {
 TreeSet注意事项:  
 1. 往TreeSet添加元素时,如果元素具备自然顺序的特性,那么就按照元素自然顺序的特性进行排序存储.  
 2. 往TreeSet添加元素时,如果元素不具备自然顺序特性,那么该元素所属的类必须要实现Comparable接口,把元素的比较规则定义在compareTo()方法上.  
+3. 如果比较元素的时候,compareTo方法返回的是0,那么该元素就被视为重复元素,不允许添加.(TreeSet与hashcode和equals没有任何联系)  
+4. 往TreeSet添加元素时,如果元素不具备自然顺序特性,那么该元素所属的类也没有实现Comparable接口,
+那么必须要在创建TreeSet的时候传入一个比较器.  
+5. 往TreeSet添加元素时,如果元素不具备自然顺序特性,该类要实现了Comparable接口,创建Treeset对象时也传入了一个比较器,那么将先用比较器的规则.  
+
 
 ```
 import java.util.TreeSet;
@@ -87,12 +92,59 @@ public class L {
 		set.add(new Person(110,"张三",1000));
 		set.add(new Person(190,"铁蛋",700));
 		set.add(new Person(130,"二哈",800));
-		
+		set.add(new Person(140,"德玛",800));
 		System.out.println("集合的元素是"+set);
 		
 	}
 }
 ```
 输出:集合的元素是 {编号190姓名铁蛋薪水700} 编号130姓名二哈薪水800} {编号110姓名张三薪水1000}  
+***
+自定义比较器:自定义一个接口即可,把元素与元素之间的比较规则定义在compare方法内即可.  
+自定义比较器的格式:  
+	class 类名 implements Comparator{
+	
+	}
+```
+import java.util.Comparator;
+import java.util.TreeSet;
+
+
+class Person {
+	int id;
+	String name;
+	int salary;
+	public Person(int id,String name,int salary) {
+		this.id = id;
+		this.name = name;
+		this.salary = salary;
+	}
+	public String toString() {
+		return "{编号"+this.id+"姓名"+this.name+"薪水"+this.salary+"}";
+	}
+
+}
+class Mycomparator implements Comparator {
+	public int compare(Object o1,Object o2) {   //写比较的方法
+		Person p1 = (Person)o1;
+		Person p2 = (Person)o2;
+		return p1.id-p2.id;
+	}
+}
+
+public class L {
+	
+	public static void main(String[] args) {
+		Mycomparator com = new Mycomparator();
+		TreeSet set = new TreeSet(com);      //传入自定的比较器
+		set.add(new Person(110,"张三",1000));
+		set.add(new Person(190,"铁蛋",700));
+		set.add(new Person(130,"二哈",800));
+		System.out.println("集合的元素是"+set);
+		
+	}
+}
+```
+输出:集合的元素 {编号110姓名张三薪水1000},{编号130姓名二哈薪水800},{编号190姓名铁蛋薪水700}  
 
 
