--- a/12.泛型和枚举.md
+++ b/12.泛型和枚举.md
@@ -1,1 +1,49 @@
+###12.1泛型
+泛型的好处：
+1. 将运行的异常提前至了编译.  
+2. 避免了无谓的强制类型转换.  
+泛型在集合中的应用:
+ArrayList<String> list = new ArrayList<String>();  
+list只能存储字符串类型的数据.存储其他类型会报错.  
+注意:泛型中没有多态,只写一边或者两边都写上.  
 
+```
+import java.util.ArrayList;
+
+public class L {
+	public static void main(String[] args) {
+		ArrayList<String> list = new ArrayList<String>();
+		list.add("aaa");
+		list.add("bbb");
+		System.out.println(list);
+	}
+}
+```
+
+###12.2自定义泛型
+在泛型中不能使用基本数据类型,如果要用,就要使用基本类型的包装类.  
+byte    Byte  
+int     Integer
+long    Long
+double  Double
+float   Float
+boolean Boolean
+char    Character
+方法上自定义泛型注意事项:  
+1. 在方法上自定义泛型,这个自定义泛型的具体数据类型在调用该方法时传入实参时确定具体的数据类型  
+2. 自定义泛型只要符合标识符命名即可.一般都习惯使用一个大写字母表示. T Type,E Element
+
+```
+//可以接收任意类型数据,并返回接收数据类型.
+import java.util.ArrayList;
+
+public class L {
+	public static void main(String[] args) {
+		String str = get("aa");
+		Integer a = get(123);
+	}
+	public static <t>t get(t obj) {
+		return obj;
+	}
+}
+```
