--- a/12.泛型和枚举.md
+++ b/12.泛型和枚举.md
@@ -47,3 +47,118 @@ public class L {
 	}
 }
 ```
+###12.3泛型类
+泛型类的定义格式:  
+class 类名<声明自定义泛型> {  
+  
+}  
+泛型类注意事项:  
+1. 在类上自定义泛型的数据类型,在使用该类创建对象时确定的.  
+2. 如果一个类在类上已经声明了自定义泛型,如果用该类创建对象时没有指定泛型数据类型,默认Object.  
+3. 在类上自定义泛型不能作用于静态方法,如果静态方法需要自定义泛型,需要在静态方法前进行声明.  
+
+```
+import java.util.ArrayList;
+
+class Too<T> {
+	public void print(T a){
+		System.out.println(a);
+	}
+	public static <E>void print1(E q) {  //静态方法重新声明泛型
+		System.out.println(q);
+	}
+}
+public class L {
+	public static void main(String[] args) {
+		String str = "HELLO";
+		Too<String> s = new Too<String> ();
+		s.print(str);
+		//s.print(1);  会报错.
+		Too.print1(str);   
+		Too.print1(1);
+
+	}
+}
+```
+###12.4泛型接口
+泛型接口注意事项:  
+1. 接口上自定义的泛型的具体类型是在实现一个接口时指定的.  
+2. 在接口上自定义的泛型如果在实现时没有指定具体类型,默认Object.  
+3. 如果要延长接口自定义泛型的具体类型,那么格式如下:  
+     class Too<T> implements Dao<T> {
+  
+	}
+```
+情况1:
+import java.util.ArrayList;
+interface Dao<T> {
+	public void print(T t);
+}
+class Too implements Dao<String> { //实现时指明具体类型
+	
+	public void print(String a){
+		System.out.println(a);
+	}
+}
+public class L {
+	public static void main(String[] args) {
+		String str = "HELLO";
+		Too s = new Too();
+		s.print(str);
+	}
+}
+
+
+
+情况2:
+import java.util.ArrayList;
+interface Dao<T> {    //泛型接口
+	public void print(T t);
+}
+class Too<T> implements Dao<T> {     //没有指明具体类型
+	
+	public void print(T a){
+		System.out.println(a);
+	}
+}
+public class L {
+	public static void main(String[] args) {
+		String str = "HELLO";
+		Too<String> s = new Too<String> ();  //创建对象时指明具体类型
+		s.print(str);
+	}
+}
+```
+###12.5泛型的上下限
+泛型中通配符: ?
+? super Integer :只能存储Integer或者是Integer父类元素. 下限  
+? extends Number:只能存储Number或者是继承Number的元素. 上限  
+
+
+```
+//定义一个函数可以接收任意类型的集合对象,要求接收的集合对象只能存储Integer或者是Integer的父类.(print)
+import java.util.ArrayList;
+import java.util.Collection;
+
+public class L {
+	public static void main(String[] args) {
+		ArrayList<Integer> list1 = new ArrayList<Integer>();
+		ArrayList<Number> list2 = new ArrayList<Number>();
+		print(list1);
+		print(list2);
+		ArrayList<Boolean> list = new ArrayList<Boolean>();
+		//print1(list); 报错
+		//print("aa"); 报错
+	}
+	
+	//泛型的上限   继承Number的可以
+	public static void print1(Collection<? extends Number> q) {
+		System.out.println(q);
+	}
+	
+	//泛型的下限   从Integer往上都可以
+	public static void print(Collection <? super Integer> q) {
+		System.out.println(q);
+	}
+}
+```
