--- a/10.集合类Map.md
+++ b/10.集合类Map.md
@@ -1,8 +1,29 @@
 ###Map
-####10.1 Map接口的迭代方法
-keyset() 获得键  
-values() 获得值  
-entrySet() 得到键和值  
+####10.1 Map
+
+Map接口的方法:  
+
+添加:  
+put(K key,V value) 添加一个映射关系  
+putAll(Map<? extends K,? extends V m> 把m中全部映射添加  
+
+获取:  
+get(Object key) 获取键  
+size()  有多少个关系  
+
+判断:  
+containsKey(Object key) 判断是否包含只能的键  
+containsValue(Object value) 判断是否包含指定的值  
+
+isEmpty() 是否为空  
+删除:  
+remove(Object key) 移除指定的键,返回键对应的值  
+clear() 清空所有映射关系  
+
+迭代:
+keyset() 获得所有键的set  
+values() 获得所有值的set  
+entrySet() 得到键和值的set  
 
 ```
 import java.util.Collection;
@@ -42,3 +63,7 @@ public class L {
 	}
 }
 ```
+
+
+
+
