--- a/10.集合类Map.md
+++ b/10.集合类Map.md
@@ -63,7 +63,11 @@ public class L {
 	}
 }
 ```
+HashMap的存储原理:  
+在向HashMap添加元素的时候,首先会调用键的hashCode方法得到元素的哈希码值,然后通过运算可以得到元素在哈希表中的位置.具体情况和HashSet相同.  
 
+TreeMap的存储原理:  
+基于红黑二叉树实现.具体情况和TreeSet类似.  
 
 
 
