--- a/13.网络编程.md
+++ b/13.网络编程.md
@@ -1,1 +1,29 @@
+###网络编程
+####网络协议
+IP协议  
+Internet网络采用的协议是 TCP/IP 协议.依靠协议为每一台主机在网络上通过为其分配Internet地址
+表示自己,这个地址就是IP地址.目前为止 IP 地址用4个字节,也就是32位的二进制数表示.称为IPV4.
+为了方便记忆,把 IP 地址分为4份,每份8bit, 2^8=0~255.  
+IP地址=网络号+主机号  
+InetAddress(IP类)  
 
+getLocalHost() 返回本地主机  
+getHostAddress() 获得这个 IP 地址  
+getHostName()    获得这台计算机的名字  
+getByName(String host)  根据一个主机名或 IP 地址生产一个 IP 地址对象  
+```
+import java.net.InetAddress;
+import java.net.UnknownHostException;
+
+public class L {
+	
+	public static void main(String[] args) throws UnknownHostException {
+		
+		InetAddress address = InetAddress.getLocalHost(); //得到本机对象
+		System.out.println(address.getHostAddress());     //查看IP地址
+		System.out.println(address.getHostName());        //查看主机名
+		
+	}
+}
+
+```
