--- a/13.网络编程.md
+++ b/13.网络编程.md
@@ -27,3 +27,64 @@ public class L {
 }
 
 ```
+UDP协议  
+UDP是无线连接通信协议,不保证可靠数据的传输  
+可以向若干个目标发送数据,接受发自若干个源的数据.  
+不需要建立连接.  
+将数据及其源和目的封装为数据包,每个数据包大小限制在64K中  
+因为无连接,所以不可靠,速度快  
+```
+import java.io.IOException;
+import java.net.DatagramPacket;
+import java.net.DatagramSocket;
+import java.net.InetAddress;
+import java.net.SocketException;
+import java.net.UnknownHostException;
+
+public class L {
+	
+	public static void main(String[] args) throws IOException {
+		//建立UDP的服务
+		DatagramSocket datagramSocket = new DatagramSocket();
+		//把数据装入包中
+		String s = "第一个消息啦啦啦";
+		DatagramPacket datagramPacket = new DatagramPacket(s.getBytes(), s.getBytes().length, InetAddress.getLocalHost(), 9875);
+		//调用UDP服务发送数据
+		datagramSocket.send(datagramPacket);
+		//关闭资源,释放端口号
+		datagramSocket.close();
+		
+		
+	}
+}
+
+接收:
+package two;
+
+import java.io.IOException;
+import java.net.DatagramPacket;
+import java.net.DatagramSocket;
+import java.net.SocketException;
+
+public class Z {
+	public static void main(String[] args) throws IOException {
+		//建立UDP的服务,并且监听一个端口
+		DatagramSocket socket = new DatagramSocket(9875);
+		//准备空的数据包用于存放数据
+		byte[] buf = new byte [1024];
+		DatagramPacket datagramPacket = new DatagramPacket(buf,buf.length);
+		//调用UDP的服务接收数据
+		socket.receive(datagramPacket);//实际上是存在byte数组中
+		
+		System.out.println("接受数据"+new String(buf,0,datagramPacket.getLength()));//获取数据包存了多少字节
+	
+	}
+}
+
+```
+***
+TCP协议  
+面向连接,有特有的通道  
+在连接中传输大量数据.  
+通过三次握手机制连接,可靠协议.  
+通信前必须建立连接,效率稍低
