--- a/13.网络编程.md
+++ b/13.网络编程.md
@@ -27,13 +27,30 @@ public class L {
 }
 
 ```
+
+***
 UDP协议  
 UDP是无线连接通信协议,不保证可靠数据的传输  
 可以向若干个目标发送数据,接受发自若干个源的数据.  
 不需要建立连接.  
 将数据及其源和目的封装为数据包,每个数据包大小限制在64K中  
 因为无连接,所以不可靠,速度快  
+UDP通讯是不分服务端和客户端的,只分发送端与接收端.  
+
+发送端的使用步骤：  
+1. 建立UDP的服务。  
+2. 准备数据，把数据封装到数据包中发送.发送端的数据包要带上IP地址与端口号.  
+3. 调用UDP的服务,发送数据  
+4. 关闭资源.  
+
+接收端的使用步骤:  
+1. 建立UDP的服务.  
+2. 准备空的数据包接收数据.  
+3. 调用UDP服务接收数据  
+4. 关闭资源   
+
 ```
+简单的发送和接收
 import java.io.IOException;
 import java.net.DatagramPacket;
 import java.net.DatagramSocket;
@@ -82,9 +99,137 @@ public class Z {
 }
 
 ```
+
+```
+模拟聊天    如果是群聊,把最后改为255.就是广播
+发送
+public class Send extends Thread {
+	
+	public void run () {
+		
+		try {
+			DatagramSocket socket = new DatagramSocket();
+			
+			BufferedReader read = new BufferedReader(new InputStreamReader(System.in)); //输入消息
+			String line = null;
+			DatagramPacket packet = null;
+			
+			while((line = read.readLine())!=null) {
+				packet = new DatagramPacket(line.getBytes(),line.getBytes().length,InetAddress.getByName("172.31.51.220"),9090);
+				socket.send(packet); //打包并发送
+			}
+			socket.close();	//关闭资源
+		} catch (SocketException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		} catch (UnknownHostException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		} catch (IOException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		
+		
+		
+	}
+
+接收
+
+public class Receive extends Thread {
+	public void run () {
+		
+	DatagramSocket socket;
+	try {
+		socket = new DatagramSocket(9090); //接收要指定端口
+		byte[] re = new byte[1024];   	   //打包
+		DatagramPacket pacKet = new DatagramPacket(re, re.length);
+		boolean flag = true;
+		while(flag) {
+			socket.receive(pacKet);			//接收包
+			System.out.println(InetAddress.getLocalHost().getHostAddress()+"说:"+new String(re,0,pacKet.getLength()));
+		}
+		socket.close();						//释放资源
+	} catch (SocketException e) {
+		// TODO Auto-generated catch block
+		e.printStackTrace();
+	} catch (IOException e) {
+		// TODO Auto-generated catch block
+		e.printStackTrace();
+	}
+	}
+	
+}
+
+主
+public class Lmain {
+	
+	public static void main(String[] args) {
+		Send s = new Send();
+		Receive r = new Receive();
+		r.start();
+		s.start();
+	}
+}
+```
+
 ***
 TCP协议  
-面向连接,有特有的通道  
-在连接中传输大量数据.  
-通过三次握手机制连接,可靠协议.  
-通信前必须建立连接,效率稍低
+1. TCP进行数据传输时,没有大小的限制.  
+2. TCP是面向连接,通过三次握手机制连接,保证数据的可靠性,是可靠协议  
+3. 通信前必须建立连接,效率稍低,速度稍慢  
+4. TCP是基于IO流进行数据传输的,面向连接  
+5. TCP是区分客户端与服务端的.  
+
+TCP协议下的Socket:
+Socket(客户端),TCP的客户端一旦启动,马上与服务器建立连接.  
+ServerSocket(服务端类)  
+
+TCP的客户端使用步骤:  
+1. 建立TCP客户端服务.  
+2. 获取到对应的流对象.
+3. 写出或读取数据
+4. 关闭资源
+
+ServerSocket的使用步骤:
+1. 建立TCP服务端服务
+2. 接收客户端的连接产生一个Socket
+3. 获取对应的输入流对象或者写出数据
+4. 关闭资源
+
+```
+发送
+public class L {
+	
+	public static void main(String[] args) throws IOException {
+		//建立TCP的服务
+		Socket socket = new Socket(InetAddress.getLocalHost(),9090);
+		//创建输出流
+		OutputStream outputStream = socket.getOutputStream();
+		//发送数据
+		outputStream.write("服务端你好".getBytes());
+		//关闭资源
+		socket.close();
+		
+	}
+}
+
+接收
+public class F {
+	public static void main(String[] args) throws Exception {
+		//建立TCP的服务.并且监听一个端口
+		ServerSocket server = new ServerSocket(9090);
+		//接收客户端的连接
+		Socket socket = server.accept();
+		//获取输入流对象,读取客户端发送内容
+		InputStream s =socket.getInputStream();
+		byte[] buf = new byte[1024];
+		int length = 0;
+		length = s.read(buf);
+		System.out.println("服务器端接收:"+new String (buf,0,length));
+		//关闭资源
+		server.close();
+		
+	}
+
+```
