--- a/12.泛型和枚举.md
+++ b/12.泛型和枚举.md
@@ -162,3 +162,55 @@ public class L {
 	}
 }
 ```
+###枚举类
+枚举类,一些方法在运行时,它需要的不是任意的值,而是规定在一定范围内的值,就需要用到枚举类  
+例如:性别 季节 方向  
+
+格式:  
+enum 类名 {
+  枚举值
+}
+
+枚举要注意的细节:  
+1. 枚举类也是一个特殊的类.  
+2. 枚举值默认的修饰符是public static final.  
+3. 枚举值就是枚举值所属的类的类型,然后枚举值是指向了本类的对象.  
+4. 枚举类的构造方法默认的修饰符是private.  
+5. 枚举类可以定义自己的成员变量与成员函数.  
+6. 枚举类可以自定义构造函数,但是构造函数的修饰符必须是private.  
+7. 枚举类可以存在抽象的方法,但是枚举值必须要实现抽象的方法.  
+8. 枚举值必须要位于枚举类的第一个语句.  
+
+枚举类可以用switch进行判断.枚举值前不需要加类名.  
+```
+enum Sex {
+	
+	man("男"),woman("女");
+	
+	String sex;
+	
+	private Sex(String sex){
+		this.sex = sex;
+		
+	}
+	public void getsex() {
+		System.out.println(sex);
+	}
+	
+	
+}
+
+public class other {
+	
+	public static void main(String[] args) {
+		Sex a = Sex.man;
+		switch(a) {
+		case man:
+			System.out.println("这是个男的");
+		case woman:
+			System.out.println("这是个女的");
+		}
+	}
+	
+}
+```
